--- a/src/app/pages/global-khitma/global-khitma.component.html
+++ b/src/app/pages/global-khitma/global-khitma.component.html
@@ -6,7 +6,9 @@
     <section>
         <header>
 
-            ختمة رمضان العالميّة
+            ختمة المسجد الأقصى الرمضانيّة
+            <br />
+            <!-- <small> (ختمة عالميّة)</small> -->
         </header>
 
         <!-- <p>
