--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -58,8 +58,9 @@
         <a routerLink="/ramadan" mat-raised-button color="accent" class="block large "
             style="background-color: #011c2f;">
             <mat-icon style="transform: rotate(-23deg);color: gold;">nightlight_round</mat-icon>
-            ختمة
-            رمضان العالميّة
+            ختمة المسجد الأقصى الرمضانيّة
+            <!-- <small>(ختمة عالميّة)</small> -->
+
         </a>
 
     </div>
