pages khitma - بسم الله

--- a/src/app/pages/create-group/create-group.component.html
+++ b/src/app/pages/create-group/create-group.component.html
@@ -122,7 +122,7 @@
 
 
 
-        <section *ngIf="false">
+        <section *ngIf="!isRecurring">
 
             <div class="center-center multi-choice">
 
@@ -148,22 +148,16 @@
 
             <p *ngIf="groupType  === KHITMA_GROUP_TYPE.PAGES_DISTRIBUTION">
 
-                جميع الأعضاء يتشاركون في نفس المهمّة خلال فترة محدّدة. مثلا: جميع الأعضاء يقرؤون الجزء الأوّل في اليوم
-                الأوّل
-                والجزء الثاني في اليوم الثاني وهكذا. في هذا النوع من الختمة يمكن لمسؤول الختمة تحديد المهمّة والفترة
-                بشكل
-                مرن،
-                فيمكن مثلا عمل مجموعة لقراءة خمس صفحات في اليوم (للأطفال مثلا) أو عمل مجموعة تقرأ جزئين أو ثلاثة في
-                اليوم الخ..
+                يقوم الأعضاء بالإنضمام للمجموعة وبعد ذلك يمكنك بدء الختمة ليقوم التطبيق بتوزيع صفحات المصحف بشكل متساوٍ
+                على جميع الأعضاء. هذا النوع من الخمة ملائم في الأساس للمجموعات الكبيرة، فمثلا إذا شارك 60 شخص فسيحصل كلّ
+                منهم على عشر صفحات تقريبا، أي ما يعادل نصف جزء.
             </p>
 
             <p *ngIf="groupType  === KHITMA_GROUP_TYPE.SEQUENTIAL">
 
                 في هذه الختمة يقوم كل عضو في المجموعة بتلاوة أحد الأجزاء بحيث أنّ المجموعة مكتملة تتم ختمة كاملة،
                 لإهدائها
-                لروح أحد المتوفّيْن مثلا. في حال كانت الختمة دوريّة فإنّ التطبيق يتيح امكانيّة تعيين الجزء التالي لكل
-                عضور
-                بشكل تلقائي وكذلك مشاركة رسالة وتسأب فيها حالة الجزء التابع لكل عضو.
+                لروح أحد المتوفّيْن مثلا.
             </p>
 
 
