--- a/src/app/shared/group-members/group-members.component.scss
+++ b/src/app/shared/group-members/group-members.component.scss
@@ -59,3 +59,10 @@ section.add-member {
         }
     }
 }
+
+.pages-range {
+    margin-left: 8px;
+    font-variant-numeric: tabular-nums;
+    font-family: ui-monospace;
+    font-weight: bold;
+}
