--- a/src/app/shared/khitma-pages-progress/khitma-pages-progress.component.scss
+++ b/src/app/shared/khitma-pages-progress/khitma-pages-progress.component.scss
@@ -19,13 +19,15 @@
 
     transform: rotateX(51deg) rotateZ(43deg);
     transform-style: preserve-3d;
-    border-radius: 32px;
+    // border-radius: 32px;
     box-shadow: 1px 1px 0 1px #f9f9fb, -1px 0 28px 0 rgba(34, 33, 81, 0.01), 28px 28px 28px 0 rgba(34, 33, 81, 0.25);
 
     transition: 0.4s ease-in-out transform, 0.4s ease-in-out box-shadow;
 
     animation: floating 10s infinite ease-in-out;
     zoom: 0.8;
+
+    border: none;
 
     tbody {
         display: block;
@@ -43,11 +45,12 @@
     }
 
     td.done {
-        background: #d0e6a5;
+        background: rgb(208, 230, 165);
+        border-color: rgba(177, 199, 134, 0.4);
     }
 
     td.disabled {
-        background: transparent;
+        display: none;
     }
 }
 
