--- a/src/app/shared/khitma-pages-progress/khitma-pages-progress.component.html
+++ b/src/app/shared/khitma-pages-progress/khitma-pages-progress.component.html
@@ -1,13 +1,3 @@
-<!-- progressCanvas:
-
-
-<canvas #progressCanvas></canvas>
-
-
-// END
- -->
-<!--  -->
-
 <table id='status-table' *ngIf="pagesStatusesMatrix" dir="ltr" cellspacing="0" cellpadding="0">
     <tbody>
         <tr *ngFor="let row of pagesStatusesMatrix; let i = index">
@@ -18,8 +8,10 @@
 </table>
 
 
+<!-- 
+
 <input [(ngModel)]="from" placeholder="from" type="number" autocomplete="false" />
 <input [(ngModel)]="to" placeholder="to" type="number" autocomplete="false" />
 
 
-<button (click)="updatePages(from,to,true)">Fill </button>
+<button (click)="updatePages(from,to,true)">Fill </button> -->
