--- a/src/app/pages/group/group-dashboard/group-types/sametask/sametask.component.html
+++ b/src/app/pages/group/group-dashboard/group-types/sametask/sametask.component.html
@@ -19,7 +19,7 @@
 
 
     <header>
-        أعضاء المجموعة
+        أعضاء المجموعة ({{group.members.length}})
     </header>
 
     <div *ngIf="isAdmin" class="center-center" style="flex-direction: column;">
