--- a/src/app/pages/create-group/create-group.component.html
+++ b/src/app/pages/create-group/create-group.component.html
@@ -149,7 +149,8 @@
             <p *ngIf="groupType  === KHITMA_GROUP_TYPE.PAGES_DISTRIBUTION">
 
                 يقوم الأعضاء بالإنضمام للمجموعة وبعد ذلك يمكنك بدء الختمة ليقوم التطبيق بتوزيع صفحات المصحف بشكل متساوٍ
-                على جميع الأعضاء. هذا النوع من الخمة ملائم في الأساس للمجموعات الكبيرة، فمثلا إذا شارك 60 شخص فسيحصل كلّ
+                على جميع الأعضاء. هذا النوع من الختمة ملائم في الأساس للمجموعات الكبيرة، فمثلا إذا شارك 60 شخص فسيحصل
+                كلّ
                 منهم على عشر صفحات تقريبا، أي ما يعادل نصف جزء.
             </p>
 
