--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -52,16 +52,15 @@
             [queryParams]="{type: 'onetime'}" style="background-color: #16769a!important;">بدء ختمة جماعيّة لمرّة
             واحدة </a>
 
-        <hr style="margin-bottom:32px" />
 
+        <!-- <hr style="margin-bottom:32px" /> -->
 
-        <a routerLink="/ramadan" mat-raised-button color="accent" class="block large "
+        <!-- <a routerLink="/ramadan" mat-raised-button color="accent" class="block large "
             style="background-color: #011c2f;">
             <mat-icon style="transform: rotate(-23deg);color: gold;">nightlight_round</mat-icon>
             ختمة المسجد الأقصى الرمضانيّة
-            <!-- <small>(ختمة عالميّة)</small> -->
 
-        </a>
+        </a> -->
 
     </div>
 
