--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #1c6151;
-$action-color: saturate(lighten($primary-color, 10%), 20%);
+$primary-color: #075E54;
+$action-color: #128C7E; //saturate(lighten($primary-color, 10%), 20%);
 $background-color: #fafafa; //saturate(lighten($primary-color,75%),20%);
 
 $status-idle-color: darkred;
