--- a/src/app/dialog/start-new-khitma/start-new-khitma.component.html
+++ b/src/app/dialog/start-new-khitma/start-new-khitma.component.html
@@ -15,6 +15,11 @@
             حجز الجزء التالي لكل عضو تلقائيّا
         </mat-radio-button>
 
+        <mat-radio-button class="radio-button" [value]="KHITMA_CYCLE_TYPE.AUTO_BOOK_FOR_DONE_ONLY">
+            حجز الجزء التالي تلقائيّا فقط للأعضاء الذين أتمّوا جزءهم
+        </mat-radio-button>
+
+
         <mat-radio-button class="radio-button" [value]="KHITMA_CYCLE_TYPE.ALL_IDLE">
             إتاحة جميع الأجزاء للإختيار
         </mat-radio-button>
