--- a/src/app/shared/celebration/celebration.component.scss
+++ b/src/app/shared/celebration/celebration.component.scss
@@ -11,11 +11,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   overflow: hidden;
   z-index: 1000;
+  position: fixed;
+  height: 1px;
+  overflow:visible;
+
+ top: 0; left: 0; right: 0; z-index: 10000; 
 
   label {
     font-weight: bold;
