--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -179,3 +179,8 @@ section > p {
   overflow: visible;
   position: unset !important;
 }
+
+
+.mat-radio-label-content{
+  white-space: normal!important;
+}
