--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,14 @@
       <!-- <span class="version">v0.9.9</span> -->
 
 
+      <mat-icon matBadge="5">notifications</mat-icon>
+
+
       <a routerLink="about">
         <mat-icon class="help-btn">help_outline</mat-icon>
       </a>
+
+
 
     </mat-toolbar>
 
