--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -184,3 +184,9 @@ section > p {
 .mat-radio-label-content{
   white-space: normal!important;
 }
+
+hr{
+  border: none;
+  border-top: 1px solid lightgray;
+  margin: 16px 16px;
+}
