--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -18,3 +18,10 @@
 a {
   margin-bottom: 16px !important;
 }
+
+
+#aqsa-khitma-btn{
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25)), url('~src/assets/aqsa-btn-bg.png') !important;
+  background-position: center;
+  background-size: cover!important;
+}
