--- a/src/app/shared/notification/notification.component.html
+++ b/src/app/shared/notification/notification.component.html
@@ -1,26 +1,33 @@
-<div *ngIf="notification">
+<div *ngIf="notification" style="position: relative;">
 
-    <h1 mat-dialog-title> {{notification.title}} </h1>
+    <button class="close-btn" mat-icon-button aria-label="close dialog" mat-dialog-close>
+        <mat-icon>close</mat-icon>
+    </button>
+
+
+    <h2 mat-dialog-title> {{notification.title}} </h2>
 
     <div mat-dialog-content>
 
-        {{notification.text}}
+        <p>{{notification.text}}</p>
 
 
     </div>
 
 
-    <div mat-dialog-actions>
+    <!-- <div mat-dialog-actions> -->
 
-        <a *ngFor="let action of notification.actions" [href]="action.url" mat-raised-button color="primary"
-            class="block">{{action.text}}</a>
+    <a *ngFor="let action of notification.actions" [href]="action.url" mat-raised-button color="primary" class="block"
+        autofocus>{{action.text}}</a>
+
+    <hr />
+
+    <mat-checkbox [(ngModel)]="dontDisplayAgain">عدم الإظهار مرّة أخرى</mat-checkbox>
 
 
-        <mat-checkbox [(ngModel)]="dontDisplayAgain">عدم الإظهار مرّة أخرى</mat-checkbox>
+    <!-- <button mat-button class="block" (click)="close()">إغلاق</button> -->
 
 
-        <button mat-button class="block" (click)="close()">إغلاق</button>
-
-    </div>
+    <!-- </div> -->
 
 </div>
