--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@use '~@angular/material' as mat;
 
 @import url("https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;700&display=swap");
 
-@import "~@angular/material/theming";
 
 @import "~src/_variables";
 
@@ -28,14 +28,14 @@ body {
                                 supported by Chrome, Edge, Opera and Firefox */
 }
 
-$custom-typography: mat-typography-config(
+$custom-typography: mat.define-typography-config(
   $font-family: "Markazi Text",
-  $headline: mat-typography-level(32px, 48px, 700),
-  $body-1: mat-typography-level(16px, 24px, 500),
-  $button: mat-typography-level(16px, 24px, 500),
-  $input: mat-typography-level(inherit, 1.125, 400),
+  $headline: mat.define-typography-level(32px, 48px, 700),
+  $body-1: mat.define-typography-level(16px, 24px, 500),
+  $button: mat.define-typography-level(16px, 24px, 500),
+  $input: mat.define-typography-level(inherit, 1.125, 400),
 );
 
-@include mat-base-typography($custom-typography);
-@include angular-material-typography($custom-typography);
+@include mat.typography-hierarchy($custom-typography);
+@include mat.all-component-typographies($custom-typography);
 // @include mat-button-typography($custom-typography);
