--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -190,3 +190,9 @@ hr{
   border-top: 1px solid lightgray;
   margin: 16px 16px;
 }
+
+
+.mat-badge-accent .mat-badge-content{
+  background-color: #f02849;
+  font-size: 75%;
+}
