--- a/src/app/shared/notification/notification.component.html
+++ b/src/app/shared/notification/notification.component.html
@@ -18,11 +18,11 @@
     <!-- <div mat-dialog-actions> -->
 
     <a *ngFor="let action of notification.actions" [href]="action.url" mat-raised-button color="primary" class="block"
-        autofocus>{{action.text}}</a>
+        autofocus gaEvent="notification_action_clicked" gaCategory="notifications">{{action.text}}</a>
 
-    <hr />
+    <!-- <hr /> -->
 
-    <mat-checkbox [(ngModel)]="dontDisplayAgain">عدم الإظهار مرّة أخرى</mat-checkbox>
+    <!-- <mat-checkbox [(ngModel)]="dontDisplayAgain">قرأت هذا الإشعار</mat-checkbox> -->
 
 
     <!-- <button mat-button class="block" (click)="close()">إغلاق</button> -->
