--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -196,3 +196,10 @@ hr{
   background-color: #f02849;
   font-size: 75%;
 }
+
+
+.mat-button-toggle-checked{
+  background-color: $primary-color;
+  color: white!important;
+  font-weight: bold;
+}
