--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -30,6 +30,7 @@ a {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25)), url('~src/assets/aqsa-btn-bg.png') !important;
   background-position: center;
   background-size: cover!important;
+  margin-bottom: 16px;
 }
 
 
